# tex-translation

./: LICENSE  README.md  pyproject.toml
src/: style_fac.py  style_maker.py
src/latex_styles/: basic_settings.py  doc_style.py  emtpy_setting.py  exam_settings.py
