[tool.poetry]
name = "tex-translation"
version = "0.1.0"
description = ""
authors = ["joonho <jh.lee@spira-t.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylatex = "^1.4.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
